update pagination and sorting in search api